--- a/llm_neuron_seg/utils/llm/instruct_template/template_test.ipynb
+++ b/llm_neuron_seg/utils/llm/instruct_template/template_test.ipynb
@@ -78,25 +78,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:  Q:\u001b[33m>>>>>>>> Input: hello\u001b[0m\n",
+      "INFO:root:  Q:\u001b[33m>>>>>>>> Input: how to trace and restruct human neuron structure based on 3d tif images?\u001b[0m\n",
       "INFO:httpx:HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "INFO:root:  LLM-A:\u001b[33mxxxxxxxx Output: Hello! How can I assist you today?\u001b[0m\n"
+      "INFO:root:  LLM-A:\u001b[33mxxxxxxxx Output: Tracing and reconstructing human neuron structures from 3D TIFF images is a complex but well-established process in computational neuroscience. This process involves several steps, including image preprocessing, segmentation, tracing, and visualization. Here is a general workflow to help you get started:\n",
+      "\n",
+      "### 1. Image Preprocessing\n",
+      "The initial step involves preparing the 3D TIFF images for analysis:\n",
+      "- **Denoising:** Apply noise reduction techniques to improve signal-to-noise ratio.\n",
+      "- **Contrast Enhancement:** Adjust contrast to enhance the visibility of neuron structures.\n",
+      "- **Normalization:** Normalize the intensity values to a common scale.\n",
+      "\n",
+      "### 2. Segmentation\n",
+      "Segmentation involves separating the neurons from the background.\n",
+      "- **Thresholding:** Use thresholding techniques to differentiate neurons from the background. Automatic methods such as Otsu's thresholding or adaptive thresholding can be useful.\n",
+      "- **Machine Learning:** Advanced segmentation can involve machine learning techniques like deep learning (e.g., using convolutional neural networks for image segmentation).\n",
+      "\n",
+      "###\u001b[0m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Hello! How can I assist you today?'"
+       "\"Tracing and reconstructing human neuron structures from 3D TIFF images is a complex but well-established process in computational neuroscience. This process involves several steps, including image preprocessing, segmentation, tracing, and visualization. Here is a general workflow to help you get started:\\n\\n### 1. Image Preprocessing\\nThe initial step involves preparing the 3D TIFF images for analysis:\\n- **Denoising:** Apply noise reduction techniques to improve signal-to-noise ratio.\\n- **Contrast Enhancement:** Adjust contrast to enhance the visibility of neuron structures.\\n- **Normalization:** Normalize the intensity values to a common scale.\\n\\n### 2. Segmentation\\nSegmentation involves separating the neurons from the background.\\n- **Thresholding:** Use thresholding techniques to differentiate neurons from the background. Automatic methods such as Otsu's thresholding or adaptive thresholding can be useful.\\n- **Machine Learning:** Advanced segmentation can involve machine learning techniques like deep learning (e.g., using convolutional neural networks for image segmentation).\\n\\n###\""
       ]
      },
-     "execution_count": 39,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +159,7 @@
     "    response = chat_llm(prompt)\n",
     "    log_w_indent(f'Output: {response}', indent, symbol='xx',flag='Response')\n",
     "    return response\n",
-    "llm_w_log('hello',2)"
+    "llm_w_log('how to trace and restruct human neuron structure based on 3d tif images?',2)"
    ]
   }
  ],
