--- a/llm_neuron_seg/utils/llm/instruct_template/template_test.ipynb
+++ b/llm_neuron_seg/utils/llm/instruct_template/template_test.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import logging "
+    "import logging \n",
+    "import re\n"
    ]
   },
   {
@@ -59,17 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "#配置openai客户端\n",
     "from openai import OpenAI\n",
+    "# from openai.error import APIConnectionError\n",
     "#from dotenv import load_dotenv\n",
+    "import openai\n",
     "import os\n",
     "import json\n",
     "#config.json 进行配置用户openai账户 \n",
-    "with open(r'neuron_seg_human\\llm_neuron_seg\\utils\\llm\\llm_config.json') as config_file:\n",
+    "with open(r'D:\\GXQ\\human_seg\\neuron_seg_human\\llm_neuron_seg\\utils\\llm\\llm_config.json') as config_file:\n",
     "    config = json.load(config_file)\n",
     "\n",
     "CLIENT = OpenAI(base_url=config['OPENAI_API_BASE'],\n",
@@ -84,6 +87,109 @@
    "source": [
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###任务描述\n",
+    "###分步骤描述\n",
+    "###工具插件描述\n",
+    "/*通过清晰地分步骤描述任务，并提供必要的工具插件信息，有效利用LLM完成具体任务，生成每一步的代码。*/\n",
+    "/*确保输入结构清晰，详细描述每个步骤的要求和工具的使用方法。使得模型的输出将更加准确和实用。*/\n",
+    "\n",
+    "whole-> 3个stage 实现\n",
+    "FOR EACH STAGE:\n",
+    "  1/输入初步任务描述及可使用工具信息\n",
+    "      - llm返回任务基本描述及规划步骤\n",
+    "      - 人工修改步骤并确认\n",
+    "  2/每一步骤逐步向llm输入并获取response代码 \n",
+    "      - 代码在10个用例上测试通过进行步骤代码留存\n",
+    "      - 不通过，返回搞错修改代码\n",
+    "  3/迭代完单stage 进行批量数据测试"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Code Blocks:\n",
+      "Code Block 1:\n",
+      "import pandas as pd\n",
+      "\n",
+      "# Read CSV file\n",
+      "data = pd.read_csv('input.csv')\n",
+      "print(data.head())\n",
+      "\n",
+      "Non-Code Content:\n",
+      "Here is an example of Python code:\n",
+      "\n",
+      "\n",
+      "You can use the above code to read a CSV file.\n",
+      "\n",
+      "Another code snippet:\n",
+      "\n",
+      "python\n",
+      "复制代码\n",
+      "from data_cleaning_tool import clean_data\n",
+      "\n",
+      "# Clean data\n",
+      "cleaned_data = clean_data(data)\n",
+      "print(cleaned_data.head())\n",
+      "Make sure to install the necessary libraries before running the code.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 分离文本+提取代码块\n",
+    "response = \"\"\"\n",
+    "Here is an example of Python code:\n",
+    "\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Read CSV file\n",
+    "data = pd.read_csv('input.csv')\n",
+    "print(data.head())```\n",
+    "You can use the above code to read a CSV file.\n",
+    "\n",
+    "Another code snippet:\n",
+    "\n",
+    "python\n",
+    "复制代码\n",
+    "from data_cleaning_tool import clean_data\n",
+    "\n",
+    "# Clean data\n",
+    "cleaned_data = clean_data(data)\n",
+    "print(cleaned_data.head())\n",
+    "Make sure to install the necessary libraries before running the code.\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "def extract_code_blocks(response):\n",
+    "    # 正则表达式匹配代码块\n",
+    "    code_pattern = re.compile(r'```(?:\\w+)?\\n(.*?)```', re.DOTALL)\n",
+    "    code_blocks = code_pattern.findall(response)\n",
+    "    non_code_content = code_pattern.sub('', response)\n",
+    "    non_code_content = non_code_content.strip()\n",
+    "    \n",
+    "    return code_blocks, non_code_content\n",
+    "\n",
+    "# 使用函数提取代码块和其他内容\n",
+    "code_blocks, non_code_content = extract_code_blocks(response)\n",
+    "\n",
+    "print(\"Code Blocks:\")\n",
+    "for i, code in enumerate(code_blocks, 1):\n",
+    "    print(f\"Code Block {i}:\\n{code}\\n\")\n",
+    "\n",
+    "print(\"Non-Code Content:\")\n",
+    "print(non_code_content)\n"
    ]
   },
   {
@@ -142,6 +248,9 @@
     "        return 'For this neuroscience image task, please develop a programming task solution plan and divide your thinking into three parts: \"# # Task Objectives and Function Description\", \"# # # Algorithm Steps and Implementation Details\", and \"# # Specific Constraints\". There is no need to write scripts and Provide each claim as a separate sentence in a separate bullet point.'\n",
     "    \n",
     "    def gen_task_step(self,data):\n",
+    "        del data\n",
+    "        return''\n",
+    "        return 'Please list the specific step propositions included in the answer above. '\n",
     "        step_description =data\n",
     "        self.step_description = step_description\n",
     "        return step_description\n",
@@ -150,19 +259,25 @@
     "        step_prompt_list=self.step_description.split()\n",
     "\n",
     "        return step_prompt_list\n",
+    "    \n",
     "\n",
     "    #生成step列表 eachstep 进行prompt修饰后 进行llm输入，获取处理代码\n",
     "    def manual_modify_step(self,data) -> list:\n",
     "        del data\n",
     "\n",
-    "       \n",
     "        step_prompt_list = process_step_description(data)\n",
     "\n",
     "        ###human modify step_list###\n",
-    "\n",
-    "\n",
     "        return step_prompt_list\n",
     "    \n",
+    "    def extract_code_blocks(response):\n",
+    "    # 正则表达式匹配代码块\n",
+    "        code_pattern = re.compile(r'```(?:\\w+)?\\n(.*?)```', re.DOTALL)\n",
+    "        code_blocks = code_pattern.findall(response)\n",
+    "        non_code_content = code_pattern.sub('', response)\n",
+    "        non_code_content = non_code_content.strip()\n",
+    "    \n",
+    "        return code_blocks, non_code_content\n",
     "    \n",
     "    def get_all_prompts_for_log(self):\n",
     "        # Spoof data to log prompting format.\n",
@@ -274,6 +389,7 @@
     }
    ],
    "source": [
+    "import openai\n",
     "def get_sentences(response):\n",
     "    \"\"\"Extract scripts & descriptions from LLM-response.\"\"\"\n",
     "    # Some manual exceptions for sentence extraction.\n",
@@ -292,8 +408,15 @@
     "    for i in facts:\n",
     "        print(i)\n",
     "\n",
+    "\n",
+    "\n",
+    "# 配置日志记录\n",
+    "logging.basicConfig(level=logging.WARNING, filename='chat_llm.log', filemode='a',\n",
+    "                    format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "from tenacity import (retry, wait_random_exponential)\n",
     "@retry(wait=wait_random_exponential(min=1, max=10))\n",
+    "\n",
+    "\n",
     "def chat_llm(prompt):\n",
     "    \"\"\"Predict with GPT-4 model.\"\"\"\n",
     "\n",
@@ -304,13 +427,18 @@
     "    else:\n",
     "        messages = prompt\n",
     "\n",
-    "    output = CLIENT.chat.completions.create(\n",
-    "        model='gpt-4o',\n",
-    "        messages=messages,\n",
+    "    try:\n",
+    "        output = CLIENT.chat.completions.create(\n",
+    "            model='gpt-4o',\n",
+    "            messages=messages,\n",
+    "        )\n",
+    "        response = output.choices[0].message.content\n",
+    "        return response\n",
+    "    except openai.error.APIConnectionError as e:\n",
+    "        # 记录日志警告及错误信息\n",
+    "        logging.warning(f\"APIConnectionError occurred: {e}\")\n",
+    "        return \"An external error occurred while trying to connect to the API. Please try again later.\"\n",
     "\n",
-    "    )\n",
-    "    response = output.choices[0].message.content\n",
-    "    return response\n",
     "\n",
     "def llm_w_log(prompt):\n",
     "    \"\"\" log inputs and outputs.\"\"\"\n",
