--- a/llm_neuron_seg/utils/llm/instruct_template/template_test.ipynb
+++ b/llm_neuron_seg/utils/llm/instruct_template/template_test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "output_type": "stream",
      "text": [
       "INFO:root:  Q:\u001b[33m>>>>>>>> This is a test message\u001b[0m\n",
-      "INFO:root:\u001b[1mAnother message without indent\u001b[0m\n"
+      "INFO:root:  LLM-A:\u001b[31m>>>> Another message without indent\u001b[0m\n"
      ]
     }
    ],
@@ -35,27 +35,35 @@
     "        datefmt='%Y-%m-%d %H:%M:%S')\n",
     "    logging.getLogger().setLevel(logging.INFO)  # logging.DEBUG\n",
     "\n",
-    "#indent区分\n",
-    "def log_w_indent(text, indent, flag ,symbol='>>'):\n",
+    "def log_w_indent(text, indent, flag, symbol='>>'):\n",
     "    \"\"\"Log and add indent.\"\"\"\n",
     "    ind2col = {i: f\"\\x1b[{a}\" for i, a in enumerate([\n",
     "        '1m', '31m', '33m', '34m', '35m'])}\n",
     "    reset = \"\\x1b[0m\"\n",
     "\n",
+    "    if indent < 0 or indent >= len(ind2col):\n",
+    "        raise ValueError(\"Invalid indent level\")\n",
+    "\n",
+    "    prefix = ''\n",
     "    if indent > 0:\n",
     "        if flag == 'Question':\n",
-    "            logging.info('  Q:'+\n",
-    "                ind2col[indent] + (indent * 2) * symbol + ' ' + text + reset)\n",
-    "        elif flag =='Response':\n",
-    "            logging.info('  LLM-A:'+\n",
-    "                ind2col[indent] + (indent * 2) * symbol + ' ' + text + reset)\n",
+    "            prefix = '  Q:'\n",
+    "        elif flag == 'Response':\n",
+    "            prefix = '  LLM-A:'\n",
+    "        elif flag == 'Code':\n",
+    "            prefix = '  Code script test:'\n",
+    "        else:\n",
+    "            raise ValueError(\"Invalid flag\")\n",
     "\n",
+    "        prefix += ind2col[indent] + (indent * 2) * symbol + ' ' + text + reset\n",
     "    else:\n",
-    "        logging.info(ind2col[indent] + text + reset)\n",
+    "        prefix = ind2col[indent] + text + reset\n",
+    "\n",
+    "    logging.info(prefix)\n",
     "\n",
     "setup_logger()\n",
     "log_w_indent('This is a test message',2,'Question')\n",
-    "log_w_indent('Another message without indent', 0,'Response')"
+    "log_w_indent('Another message without indent', 1,'Response')"
    ]
   },
   {
@@ -105,8 +113,9 @@
     "      - llm返回任务基本描述及规划步骤\n",
     "      - 人工修改步骤并确认\n",
     "  2/每一步骤逐步向llm输入并获取response代码 \n",
+    "      - 代码块增量进行测试\n",
     "      - 代码在10个用例上测试通过进行步骤代码留存\n",
-    "      - 不通过，返回搞错修改代码\n",
+    "      - 不通过，返回报错 修改代码\n",
     "  3/迭代完单stage 进行批量数据测试"
    ]
   },
@@ -200,20 +209,24 @@
    "source": [
     "import hashlib\n",
     "from collections import defaultdict\n",
+    "import subprocess\n",
     "\n",
     "class SpoofData:\n",
     "    def __getitem__(self, item):\n",
     "        return f'<{item}>'\n",
     "def md5hash(string):\n",
     "    return int(hashlib.md5(string.encode('utf-8')).hexdigest(), 16)\n",
-    "\n",
+    "#llm问答\n",
     "class LLMResponse:\n",
-    "    def __init__(self,ini_task:str,n_regenerate,reset,reset_stages):\n",
+    "    def __init__(self,ini_task:str,n_regenerate,reset,reset_stages,code_save_dir):\n",
     "        self.ini_task_question=ini_task\n",
     "        self.n_regenerate=n_regenerate\n",
     "        self.reset=reset\n",
     "        self.reset_stages=reset_stages\n",
     "        self.export_predict_response = defaultdict(defaultdict(list).copy)\n",
+    "        self.code_scripts=None\n",
+    "        self.code_save_dir = code_save_dir\n",
+    "        \n",
     "        \n",
     "    #indent用于日志记录 stepid:步骤id  reuse:是否进行再次输入迭代\n",
     "    def llw_w_log(self, prompt, indent,stepidx, stage,reuse=False):\n",
@@ -255,27 +268,44 @@
     "        self.step_description = step_description\n",
     "        return step_description\n",
     "    \n",
-    "    def process_step_description(self):\n",
+    "    def process_step_description(self)-> list:\n",
     "        step_prompt_list=self.step_description.split()\n",
+    "       #调用template.json\n",
     "\n",
     "        return step_prompt_list\n",
     "    \n",
     "\n",
-    "    #生成step列表 eachstep 进行prompt修饰后 进行llm输入，获取处理代码\n",
+    "    # 生成step列表 eachstep 进行prompt修饰后 进行llm输入，获取处理代码\n",
+    "    # manual \n",
     "    def manual_modify_step(self,data) -> list:\n",
+    "         ###human modify step_list###\n",
     "        del data\n",
-    "\n",
     "        step_prompt_list = process_step_description(data)\n",
     "\n",
-    "        ###human modify step_list###\n",
-    "        return step_prompt_list\n",
-    "    \n",
-    "    def extract_code_blocks(response):\n",
+    "        step_modify_list = []\n",
+    "        print(\"Original step_prompt_list:\")\n",
+    "        for i, step in enumerate(step_prompt_list):\n",
+    "            print(f\"{i+1}. {step}\")\n",
+    "        print(\"\\nPlease enter the modified steps. Press Enter to keep the original step.\\n\")\n",
+    "\n",
+    "        # 循环获取用户输入\n",
+    "        for step in step_prompt_list:\n",
+    "            modified_step = input(f\"Modify the step '{step}': \")\n",
+    "            if modified_step.strip():  # 如果输入不为空，去除前后的空格\n",
+    "                step_modify_list.append(modified_step)\n",
+    "            else:  \n",
+    "                step_modify_list.append(step)\n",
+    "\n",
+    "        return step_modify_list\n",
+    "\n",
+    "       \n",
+    "    def extract_code_blocks(self,response):\n",
     "    # 正则表达式匹配代码块\n",
     "        code_pattern = re.compile(r'```(?:\\w+)?\\n(.*?)```', re.DOTALL)\n",
     "        code_blocks = code_pattern.findall(response)\n",
     "        non_code_content = code_pattern.sub('', response)\n",
     "        non_code_content = non_code_content.strip()\n",
+    "        self.code_script = code_blocks\n",
     "    \n",
     "        return code_blocks, non_code_content\n",
     "    \n",
@@ -284,21 +314,41 @@
     "        data = SpoofData()\n",
     "        prompts = dict(\n",
     "            gen_ini_task_decription=self.gen_ini_task_decription(data),\n",
-    "            task_step_lsit= manual_modify_step(data))\n",
+    "            task_step_list= self.manual_modify_step(data),\n",
+    "            step_code =  self.extract_code_blocks(data)\n",
+    "            )\n",
     "            # base_gen_questions=self.base_gen_questions(data),\n",
     "            # base_answer_question=self.base_answer_question(data),\n",
     "            # base_equivalence=self.base_equivalence(data))\n",
     "\n",
     "        return prompts\n",
     "\n",
-    "    def gen_questions(self, data):\n",
-    "        del data\n",
-    "        raise\n",
+    "    def run_script(self, input_data, step_id, output_suffix):\n",
+    "        code = self.code_script\n",
+    "        script_dir = self.code_save_dir\n",
+    "        file_path = os.path.join(script_dir, f'{step_id}_script.py')\n",
+    "        output_file_path = os.path.join(script_dir, f'{step_id}_output.{output_suffix}')\n",
+    "        \n",
+    "        try:\n",
+    "            with open(file_path, \"w\") as file:\n",
+    "                file.write(code)\n",
+    "        except Exception as e:\n",
+    "            return f\"Error writing to file: {e}\"\n",
     "\n",
-    "    def answer_question(self, data):\n",
-    "        del data\n",
-    "        raise\n",
+    "        cmd_command = f\"python {file_path} {input_data}\"\n",
+    "        try:\n",
+    "            result = subprocess.run(cmd_command, shell=True, capture_output=True, text=True)\n",
+    "            result.check_returncode()  # 检查命令是否成功运行\n",
+    "            logging.info(f\"Code script generated successfully!!{file_path}:{result.stdout}\")\n",
+    "            return result.stdout\n",
+    "        except subprocess.CalledProcessError as e:\n",
+    "            logging.info(f\"Error running script: {e.stderr.strip()}\")\n",
+    "            return e.stderr.strip()\n",
+    "        except Exception as e:\n",
+    "            logging.info(f\"Unexpected error: {str(e)}\")\n",
+    "            return str(e)\n",
     "\n",
+    "    \n",
     " \n"
    ]
   },
@@ -390,27 +440,8 @@
    ],
    "source": [
     "import openai\n",
-    "def get_sentences(response):\n",
-    "    \"\"\"Extract scripts & descriptions from LLM-response.\"\"\"\n",
-    "    # Some manual exceptions for sentence extraction.\n",
     "\n",
-    "    facts = response.replace('Ph.D.', 'PhD').replace('\\n', ' ').split('. ')\n",
-    "    # facts = [f.strip() + '.' if i < len(facts) - 1 else f.strip() for i, f in enumerate(facts)]\n",
-    "    for i in facts:\n",
-    "        print(i)\n",
-    "\n",
-    "def get_sentences(response):\n",
-    "    \"\"\"Extract scripts & descriptions from LLM-response.\"\"\"\n",
-    "    # Some manual exceptions for sentence extraction.\n",
-    "    \n",
-    "    # facts = response.replace('Ph.D.', 'PhD').replace('\\n', ' ').split('. ')\n",
-    "    # facts = [f.strip() + '.' if i < len(facts) - 1 else f.strip() for i, f in enumerate(facts)]\n",
-    "    for i in facts:\n",
-    "        print(i)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 配置日志记录\n",
+    "# 配置api日志记录\n",
     "logging.basicConfig(level=logging.WARNING, filename='chat_llm.log', filemode='a',\n",
     "                    format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "from tenacity import (retry, wait_random_exponential)\n",
